--- a/frontend/src/screens/board.html
+++ b/frontend/src/screens/board.html
@@ -13,10 +13,10 @@
 
                                     <div class="col-sm-10 col-sm-offset-1">
                                         <div class="pull-left">
-                                            Player 1 (<span class="" data-bind="text: obsP1Character"></span>)
+                                            <h3>Player 1 <span class="" data-bind="text: obsP1Character"></span></h3>
                                         </div>
                                         <div class="pull-right">
-                                             (<span class="" data-bind="text: obsP2Character"></span>) Computer
+                                             <h3><span class="" data-bind="text: obsP2Character"></span> Computer</h3>
                                         </div>
                                     </div>
 
